Final build before ECS

--- a/deps/CMakeLists.txt
+++ b/deps/CMakeLists.txt
@@ -3,3 +3,4 @@ add_subdirectory(bitsery)
 add_subdirectory(GameNetworkingSockets)
 set(SFML_BUILD_GRAPHICS true)
 add_subdirectory(SFML)
+add_subdirectory(flecs)
