--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,9 +1,10 @@
 
-add_executable(asteroids "main.cpp" "base.hpp" "game.hpp" "game.cpp" "physics.hpp")
+add_executable(asteroids "main.cpp" "base.hpp" "game.hpp" "game.cpp" "physics.hpp" "entity.hpp")
 
 target_link_libraries(asteroids PUBLIC 
 	bitsery 
 	GameNetworkingSockets::static
 	sfml-system
 	sfml-graphics
-    sfml-audio)
+    sfml-audio
+    flecs_static)
