--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "deps/SFML"]
 	path = deps/SFML
 	url = https://github.com/SFML/SFML
+[submodule "deps/flecs"]
+	path = deps/flecs
+	url = https://github.com/sandermertens/flecs
