--- a/deps/CMakeLists.txt
+++ b/deps/CMakeLists.txt
@@ -4,3 +4,4 @@ add_subdirectory(GameNetworkingSockets)
 set(SFML_BUILD_GRAPHICS true)
 add_subdirectory(SFML)
 add_subdirectory(flecs)
+add_subdirectory(THST)
