--- a/deps/CMakeLists.txt
+++ b/deps/CMakeLists.txt
@@ -5,3 +5,5 @@ set(SFML_BUILD_GRAPHICS true)
 add_subdirectory(SFML)
 add_subdirectory(flecs)
 add_subdirectory(THST)
+set(TGUI_BACKEND SFML_GRAPHICS)
+add_subdirectory(TGUI)
