--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,4 +8,10 @@ target_link_libraries(asteroids PUBLIC
 	sfml-graphics
     sfml-audio
     flecs_static
-	THST)
+	THST
+	tgui)
+
+add_custom_command(TARGET asteroids POST_BUILD
+  COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_RUNTIME_DLLS:asteroids> $<TARGET_FILE_DIR:asteroids>
+  COMMAND_EXPAND_LISTS
+  )
