--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION "3.12")
 project("Asteroids" VERSION "0.0.0")
 
+set(BUILD_SHARED_LIBS true)
+unset(BUILD_STATIC_LIBS)
+
 if(CMAKE_BUILD_TYPE STREQUAL "Release") 
 	message("BUILDING FOR RELEASE")
 	# explicitly link to runtime libraries and not debug libraries
@@ -9,7 +12,7 @@ if(CMAKE_BUILD_TYPE STREQUAL "Release")
 endif()
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/game")
-set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/game")
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/game/debug")
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/game")
 
 add_subdirectory("deps")
