--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -14,10 +14,10 @@ if(WIN32)
 	  )
 endif()
 
-if(CMAKE_BUILD_TYPE STREQUAL "Release")
-	if (WIN32)
-		target_link_options(asteroids PRIVATE "/SUBSYSTEM:WINDOWS" "/ENTRY:mainCRTStartup")
-	else()
-		target_link_options(asteroids PRIVATE "-mwindows")
-	endif()
-endif()
+# if(CMAKE_BUILD_TYPE STREQUAL "Release")
+# 	if (WIN32)
+# 		target_link_options(asteroids PRIVATE "/SUBSYSTEM:WINDOWS" "/ENTRY:mainCRTStartup")
+# 	else()
+# 		target_link_options(asteroids PRIVATE "-mwindows")
+# 	endif()
+# endif()
