--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,10 @@
 cmake_minimum_required(VERSION "3.12")
+
+if(WIN32)
+    message("Using the VCPKG Toolchain for Windows")
+    set(CMAKE_TOOLCHAIN_FILE "$ENV{VCPKG_ROOT}/scripts/buildsystems/vcpkg.cmake")
+endif()
+
 project("Asteroids" VERSION "0.0.0")
 
 set(BUILD_SHARED_LIBS true)
